Fix bug 272346, unable to set MySQL password to 'password'

Praise Lachlan for spotting inconsistency between default value in .xml
file and in code.

BUG: 272346
FIXED-IN: 2.6
REVIEW: 104751